crates/vexor-compiler/tests/golden/error/input/list_range2.vx
// unexpected ','
let zs = [1..2,3]
export Circle(10)
